# Slop

./: .gitignore  DESIGN.md  DOCS.md  FULL_LANGUAGE_LOWERING.md  LEARN_SLOP_IN_10_MINUTES.md  LOW_LEVEL.md  PRODUCTION.md  README.md  ROADMAP.md  SIR_OPTIMIZER.md  SLOP_CHEATSHEET.md  SLOP_IR.md  STDLIB.md  UNSAFE_POLICY.md  benchmark_cpp.cpp  benchmark_cpp_ffi.cpp  benchmark_go.go  benchmark_par.slop  benchmark_parallel.slop  benchmark_rust.rs  benchmark_seq.slop  benchmark_slop.slop  benchmark_slop_ffi.slop  benchmark_web_server.py  benchmark_zig.zig  compiler.slop  compiler_v2.slop  complex_syntax.slop  cpp_library_test.cpp  easy_start.slop  ffmpeg_headers.h  ffmpeg_headers.slop  game_demo.slop  gpu_compute.slop  hardware_access.slop  hello.slop  install.sh  llm_layer.slop  low_level_demo.slop  native_backend_demo.slop  (+44 more)
.github/workflows/: ci.yml
bootstrap/prebuilt/: README.md
bootstrap/prebuilt/linux-x86_64/: SHA256SUMS  slop-compiler  slop-native-backend  slop-pipeline
rust_bridge/: Cargo.toml  build.rs
rust_bridge/examples/: test_bridge.rs
rust_bridge/src/: lib.rs
std/hw/: hw.slop
std/io/: io.slop
std/test/: test.slop
tools/: phase4_7_smoke.sh  production_gate.sh  slop_lsp.py  slop_test.py
